update description & fix menu overflow

--- a/assets/css/classes.sass
+++ b/assets/css/classes.sass
@@ -23,6 +23,7 @@
   width: 1em
   fill: currentColor
   transition: .2s color
+  flex-shrink: 0
 
 {% endif %}
 
